# razi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml  razi_demo.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  policy_reference.md  spec_reference.md
examples/: escalation.aispec  sentiment.aispec  zendesk.aispec
examples/inputs/: borderline.json  policy_violation.json  sentiment_input.json  sentiment_positive.json  sla_breach.json  zendesk_ticket.json
examples/schemas/: escalation_decision.schema.json  input.schema.json  output.schema.json  sentiment_input.json  sentiment_output.json  zendesk_input.json  zendesk_output.json
examples/templates/: escalation_decision_v1.txt  sentiment_rules.txt  zendesk_troubleshoot.txt
razi/: builder.py  cli.py  evidence.py  policy.py  runner.py  schema_validator.py
razi/compiler/: compile.py  dag.py  ir.py  lock.py  policy_compile.py
razi/models/: __init__.py  openai.py
razi/providers/: base.py  ollama_provider.py  openai_provider.py
razi/replay/: replay.py  store.py
razi/runtime/: evidence.py  policy.py  runtime.py  synthesis.py  trace.py
razi/spec/: loader.py  spec_schema.json  validator.py
tests/: test_builder.py  test_evidence.py  test_integration.py  test_policy.py  test_replay.py  test_runner.py  test_synthesis.py
tests/fixtures/: .gitkeep
